--- a/docs/src/content/docs/blog/devblog002.mdx
+++ b/docs/src/content/docs/blog/devblog002.mdx
@@ -18,6 +18,7 @@ import phyrexian from '/src/assets/dv002-dreadnaught.jpg'
 import iseria from '/src/assets/dv002-iseria.png'
 import stones from '/src/assets/dv002-sacredstones.png'
 import diff from '/src/assets/dv002-diff.jpg'
+import wars from '/src/assets/dv002-advancewars.png'
 
 import { Image } from 'astro:assets';
 
@@ -196,23 +197,23 @@ Mind you, game designers have the option to lessen the amount of experience poin
 <Image src={iseria} alt='' />
 _The Iseria Queen from Valkyrie Profile is the last secret optional boss of the game and has... 2,300,000 HP._
 
-## Our last big subject for today: normalization
+## Our last topic for today: normalization
 
-Normalization in game design ensures that stats (health, speed, power, et cetera) are balanced and meaningful across the board.
+Normalization in game design ensures that stats (health, speed, power, etc.) are balanced and meaningful across the board.
 
-### Example 2: Percentages in a strategy game
+### Example 2: Thinking in percentages in a strategy game
 
 Let's look at the ingredients of a turn-based strategy game.
 
 <Image src={stones} alt='' />
-_Fire Emblem: The Sacred Stones_
+_tk add description Fire Emblem: The Sacred Stones_
 
-tk
-_Advance Wars 2 UI_
+<Image src={wars} alt='' />
+_tk add description Advance Wars 2 UI_
 
 Based off of these images, we can identify the following components:
 
-- A **board** composed of tiles
+- A **board** composed of tiles.
 - These **tiles** represent **terrain**, and have bonuses or penalties depending on the unit traversing them.
 - **Units** the player controls, with movement and strength stats.
 
@@ -220,15 +221,15 @@ So let's set up some stats for a strategy game with two systems, **unit types** 
 
 | Unit types   | Terrain |
 | -------      | ------- |
-| Infantry     | Rivers  |
-| Cavalry      | Plains  |
-| Supply wagon | Paved roads |
+| Infantry     | Rivers 🏞️ |
+| Cavalry      | Plains 🌾 |
+| Supply wagon | Paved roads 🛣️ |
 
 In this hypothetical game, one of your tasks as a designer is to decide on movement bonuses or penalties.
 
 Here's one possible configuration:
 
-| Unit type | Rivers  | Plains | Paved roads |
+| Unit type | Rivers  | Plains | Paved roads 🛣️ |
 | --------  | ------ | ---------- | ---------- |
 | Infantry     | 0   | +1 tile    | +2 tiles |
 | Cavalry      | -1 tile   | +2 tiles   | +4 tiles |
@@ -253,15 +254,12 @@ In the case of strategy games with movement, we can gain a sense of "playtime" t
 If the average unit movement value is 5 tiles, and the board is 15x15 tiles, then we can _feel_ that "spacing" unit buffs or debuffs by 1 (+1, +2, +3) might be meaningful, but if we change the board to 30x30, then assigning such low values is going to muddle the units; they'll all be roughly similar in movement.
 
 <Image src={diff} alt='' />
+tk add captions for the boards
 _Cyan can move 5 tiles, and yellow can move up to 8, overlapping both pink (7) and purple (6) on the 15x15 board. A smaller board size means a greater percentage of movement per tile, which is lost if values are represented as whole numbers and aren't scaled through percentages or some other formula._
 
 As we observed with the attack values, seeing those values as **percentages** of the total HP helped create more tension. In this example, the superiority or inferiority of one unit over another can be maintained by expressing the movement values as percentages against the **average board size**. To the user, they'll be whole numbers. In a spreadsheet, you can create formulas.
 
-There is another, more pragmatic problem: how do you scale up those numbers to create 30 unit types, or even 100 unit types without someone messing up by typing in an extra 0, or accidentally omitting the `-` sign in the case of debuffs?
-
-### Applying basic normalization
-
-Alongside our use of percentages, here's another way of viewing bonuses and penalties:
+For our example, let's assume an average board size of **23x23**.
 
 | Scale name | Formula | Value given board size of 23 |
 | -------  | ------ | ------ |
@@ -273,6 +271,14 @@ Alongside our use of percentages, here's another way of viewing bonuses and pena
 | Terrible | -9% of average board size  | -2 |
 | Worst | -15% of average board size  | -4 |
 
+This table both normalizes the values by defining the level of (dis)advantages possible in the game, as well as the scaled movement buffs and debuffs.
+
+### Basic normalization
+
+tk - fix this section
+
+There is another, more pragmatic problem: how do you scale up those numbers to create 30 unit types, or even 100 unit types without someone messing up by typing in an extra 0, or accidentally omitting the `-` sign in the case of debuffs?
+
 By setting these variables or constants in one place, such as a constants file or sheet, you can reuse the values anywhere. Now, you've constrained the values to a certain set. This eliminates errors such as typing in `-8` or `-70` instead of `-7`. This process of separating raw values into their own table is basic normalization in game design.
 
 (For those with a background in database design, this fulfills the 'no repeating values or groups' requirement of the first normal form (1NF) but doesn't necessarily satisfy 1NF by itself).
@@ -280,6 +286,8 @@ By setting these variables or constants in one place, such as a constants file o
 Additionally, if you need to rebalance the "Good" value, you only need to edit its definition in one file. Let's say that given 3 factions, each faction has 5 units that make use of a "small" buff, i.e. the "Good"-level buff. That's 15 units that can be instantly rebalanced by changing only one value.
 
 ## Summary
+
+tk make this section nicer
 
 - Start by figuring out what you want your user to do and how long that loop of gameplay should take to finish. 
   - Define a win or progression condition.
